--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <label class="sr-only" for="tel">Введите номер</label>
                 <input type="tel" class="form-control" id="tel" placeholder="Введите номер">
             </div>
-            <button class="btn btn-lg btn-primary">Найти</button>
+            <button class="btn btn-lg btn-primary">Проверить</button>
         </form>
     </div>
 
